[gd_scene load_steps=2 format=3 uid="uid://br244knxglscr"]

[ext_resource type="Script" path="res://utils/Explosion/explosion.gd" id="1_1nsi3"]

[node name="Explosion" type="Node2D"]
script = ExtResource("1_1nsi3")

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]

[node name="ExplosionSFX" type="AudioStreamPlayer2D" parent="."]

[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
[connection signal="finished" from="ExplosionSFX" to="." method="_on_explosion_sfx_finished"]
